--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -26,6 +26,8 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     - name: Run Tests
+      env:
+        SECRET_KET: ${{ secrets.SECRET_KEY }}
       run: |
         python manage.py test
     - name: Django Security Check
