--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -29,6 +29,6 @@ jobs:
       env:
         SECRET_KET: ${{ secrets.SECRET_KEY }}
       run: |
-        python manage.py test
+        python manage.py test "$env:SUPER_SECRET"
     - name: Django Security Check
       uses: victoriadrake/django-security-check@v1.0.0
