--- a/.github/workflows/django_ci.yml
+++ b/.github/workflows/django_ci.yml
@@ -27,8 +27,8 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       env:
-        SECRET_KET: ${{ secrets.SECRET_KEY }}
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
       run: |
-        SECRET_KET=$SECRET_KET; python manage.py test
+        SECRET_KEY=$SECRET_KEY; python manage.py test
     - name: Django Security Check
       uses: victoriadrake/django-security-check@v1.0.0
