--- a/requirements.txt
+++ b/requirements.txt
@@ -11,8 +11,11 @@ isort==4.3.21
 lazy-object-proxy==1.4.3
 libsass==0.20.0
 mccabe==0.6.1
+Pillow==7.2.0
 pycodestyle==2.6.0
 pylint==2.5.3
+pylint-django==2.1.0
+pylint-plugin-utils==0.6
 python-dotenv==0.14.0
 pytz==2020.1
 six==1.15.0
