--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,13 @@
     "python.linting.pylintArgs": [
         "--load-plugins",
         "pylint_django",
+        "--disable=W0222, C0111"
         // "--only-errors"
     ],
     "python.pythonPath": "venv\\Scripts\\python.exe"
 }
+
+/*
+    W0222: signature-differs
+    C0111: missing-docstring
+*/
